--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^5.0.0
+  cloud_firestore: ^4.15.4
+  flutter_ffmpeg: ^0.4.2
+
 
 dev_dependencies:
   flutter_test:
